--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 30px;
   max-width: 400px;
   background: linear-gradient(3deg, #3d649b 0%, #11111100 100%);
   -webkit-box-shadow: 0px 20px 15px -5px #314f74;
@@ -92,22 +91,23 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 0 25px;
+  padding: 0 10px;
 }
 
 .button-box img {
   position: relative;
-  width: 150px;
-  height: 200px;
+  width: 90px;
+  height: 130px;
   -o-object-fit: cover;
   object-fit: cover;
   background: #1f2a39c2;
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
   z-index: 0;
+  opacity: 0.8;
   -webkit-clip-path: polygon(5% 0, 94% 0, 85% 100%, 19% 100%);
           clip-path: polygon(5% 0, 94% 0, 85% 100%, 19% 100%);
-  opacity: 0.7;
+  mask-mode: alpha;
 }
 
 .button-box .animationholo {
@@ -134,8 +134,8 @@ main {
 }
 
 .button-box .holo {
-  width: 150px;
-  height: 200px;
+  width: 90px;
+  height: 130px;
   position: absolute;
   top: -1px;
   z-index: 1;
@@ -150,11 +150,15 @@ main {
           animation-duration: 30s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
+  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(black));
+  -webkit-mask-image: linear-gradient(transparent, black);
+          mask-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(black));
+          mask-image: linear-gradient(transparent, black);
 }
 
 .button-box .holoblue {
-  width: 150px;
-  height: 200px;
+  width: 90px;
+  height: 130px;
   position: absolute;
   top: -1px;
   z-index: 1;
@@ -165,7 +169,7 @@ main {
 }
 
 .button-box .holoshadow {
-  width: 150px;
+  width: 90px;
   height: 0px;
   bottom: 30px;
   position: absolute;
@@ -181,8 +185,8 @@ main {
 button {
   position: relative;
   top: -4px;
-  width: 150px;
-  font-size: 1rem;
+  width: 90px;
+  font-size: 0.7rem;
   font-weight: bold;
   color: #e9e9e9;
   padding: 10px 15px;
@@ -206,19 +210,19 @@ button:hover {
     opacity: 0.3;
   }
   5% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   60% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   63% {
     opacity: 0.3;
   }
   65% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   97% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
 }
 
@@ -227,19 +231,19 @@ button:hover {
     opacity: 0.3;
   }
   5% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   60% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   63% {
     opacity: 0.3;
   }
   65% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
   97% {
-    opacity: 0.6;
+    opacity: 0.7;
   }
 }
 
@@ -264,6 +268,34 @@ button:hover {
   }
   100% {
     background-position-y: 0px;
+  }
+}
+
+@media (min-width: 576px) {
+  main {
+    padding: 0 25px;
+  }
+  .button-box__box {
+    padding: 0 25px;
+  }
+  .button-box img {
+    width: 150px;
+    height: 200px;
+  }
+  .button-box .holo {
+    width: 150px;
+    height: 200px;
+  }
+  .button-box .holoblue {
+    width: 150px;
+    height: 200px;
+  }
+  .button-box .holoshadow {
+    width: 200px;
+  }
+  button {
+    width: 150px;
+    font-size: 0.9rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
