--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+$deskopt-box-width: 90px;
+$deskopt-box-height: 130px;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -18,7 +21,6 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 30px;
 	max-width: 400px;
 	background: linear-gradient(3deg, rgb(61, 100, 155) 0%, #11111100 100%);
 	box-shadow: 0px 20px 15px -5px #314f74;
@@ -63,20 +65,22 @@ main {
 	&__box {
 		display: flex;
 		flex-direction: column;
-		padding: 0 25px;
+		padding: 0 10px;
 	}
 	img {
 		position: relative;
-		width: 150px;
-		height: 200px;
+		width: $deskopt-box-width;
+		height: $deskopt-box-height;
 		-o-object-fit: cover;
 		object-fit: cover;
 		background: #1f2a39c2;
 		-webkit-filter: grayscale(1);
 		filter: grayscale(1);
 		z-index: 0;
+		opacity: 0.8;
 		clip-path: polygon(5% 0, 94% 0, 85% 100%, 19% 100%);
-		opacity: 0.7;
+
+		mask-mode: alpha;
 	}
 	.animationholo {
 		animation-duration: 6s;
@@ -92,8 +96,8 @@ main {
 		animation-delay: 1s;
 	}
 	.holo {
-		width: 150px;
-		height: 200px;
+		width: $deskopt-box-width;
+		height: $deskopt-box-height;
 		position: absolute;
 		top: -1px;
 		z-index: 1;
@@ -104,10 +108,11 @@ main {
 		animation-name: holograin;
 		animation-duration: 30s;
 		animation-iteration-count: infinite;
+		mask-image: linear-gradient(transparent, black);
 	}
 	.holoblue {
-		width: 150px;
-		height: 200px;
+		width: $deskopt-box-width;
+		height: $deskopt-box-height;
 		position: absolute;
 		top: -1px;
 		z-index: 1;
@@ -116,7 +121,7 @@ main {
 		background: #3b6094;
 	}
 	.holoshadow {
-		width: 150px;
+		width: $deskopt-box-width;
 		height: 0px;
 		bottom: 30px;
 		position: absolute;
@@ -130,8 +135,8 @@ main {
 button {
 	position: relative;
 	top: -4px;
-	width: 150px;
-	font-size: 1rem;
+	width: $deskopt-box-width;
+	font-size: 0.7rem;
 	font-weight: bold;
 	color: #e9e9e9;
 	padding: 10px 15px;
@@ -152,19 +157,19 @@ button:hover {
 		opacity: 0.3;
 	}
 	5% {
-		opacity: 0.6;
+		opacity: 0.7;
 	}
 	60% {
-		opacity: 0.6;
+		opacity: 0.7;
 	}
 	63% {
 		opacity: 0.3;
 	}
 	65% {
-		opacity: 0.6;
+		opacity: 0.7;
 	}
 	97% {
-		opacity: 0.6;
+		opacity: 0.7;
 	}
 }
 @keyframes holograin {
@@ -176,5 +181,36 @@ button:hover {
 	}
 	100% {
 		background-position-y: 0px;
+	}
+}
+
+@media (min-width: 576px) {
+	main {
+		padding: 0 25px;
+	}
+	.button-box {
+		&__box {
+			padding: 0 25px;
+		}
+		img {
+			width: 150px;
+			height: 200px;
+		}
+		.holo {
+			width: 150px;
+			height: 200px;
+		}
+		.holoblue {
+			width: 150px;
+			height: 200px;
+		}
+		.holoshadow {
+			width: 200px;
+		}
+	}
+
+	button {
+		width: 150px;
+		font-size: 0.9rem;
 	}
 }
