--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   color: #e2e2e2;
   height: 100vh;
   background-color: #111111;
-  background: url("/img/bg.jpg");
+  background: url("../img/bg.jpg");
   background-position: center;
 }
 
@@ -142,7 +142,7 @@ main {
   opacity: 0.1;
   -webkit-clip-path: polygon(5% 0, 95% 0px, 88% 100%, 15% 100%);
           clip-path: polygon(5% 0, 95% 0px, 88% 100%, 15% 100%);
-  background: url("/img/holo.jpg");
+  background: url("../img/holo.jpg");
   background-position-y: 0px;
   -webkit-animation-name: holograin;
           animation-name: holograin;
