--- a/style.scss
+++ b/style.scss
@@ -13,14 +13,17 @@ body {
 	font-family: 'Roboto Condensed', sans-serif;
 	color: #e2e2e2;
 	height: 100vh;
-	background-color: #111111;
-	background: url('../img/bg.jpg');
+	background: url(../img/bg.jpg);
 	background-position: center;
+	background-repeat: no-repeat;
+	background-color: #000;
 }
 main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
+	top: -30px;
 	max-width: 400px;
 	background: linear-gradient(3deg, rgb(61, 100, 155) 0%, #11111100 100%);
 	box-shadow: 0px 20px 15px -5px #314f74;
@@ -32,16 +35,17 @@ main {
 	background: #3c619561;
 	margin-top: 10px;
 	padding: 0 20px;
+	font-size: 0.8rem;
+
 	p {
 		color: #efeded;
 		text-transform: capitalize;
 		margin: 15px 0;
 
 		i {
-			font-size: 1.2rem;
-			opacity: 0.4;
+			opacity: 0.7;
 			margin: 0 10px;
-			width: 20px;
+			width: 30px;
 		}
 		span {
 			font-size: 0.9rem;
@@ -50,10 +54,15 @@ main {
 		}
 	}
 	.points {
-		font-size: 1.2rem;
+		font-size: 1rem;
+		padding: 4px;
 		text-align: center;
+		border-bottom: 1px solid #a5cbff33;
 		span {
 			font-size: 1rem;
+		}
+		.addpoints {
+			transition: opacity 1s;
 		}
 	}
 }
@@ -106,6 +115,7 @@ main {
 		background: url('../img/holo.jpg');
 		background-position-y: 0px;
 		animation-name: holograin;
+		animation-timing-function: linear;
 		animation-duration: 30s;
 		animation-iteration-count: infinite;
 		mask-image: linear-gradient(transparent, black);
@@ -131,7 +141,27 @@ main {
 		z-index: 3;
 	}
 }
-
+.loading {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+	top: 100px;
+	font-size: 4rem;
+	z-index: 2;
+	width: 100%;
+	height: 50px;
+	justify-content: center;
+	opacity: 0.5;
+	text-shadow: 2px -3px 20px #3f8aff2b;
+	color: #2f4c74;
+	transition: opacity 1s;
+	i {
+		animation: loading;
+		animation-duration: 10s;
+		animation-iteration-count: infinite;
+	}
+}
 button {
 	position: relative;
 	top: -4px;
@@ -147,9 +177,12 @@ button {
 	cursor: pointer;
 	transition: 0.3s border;
 }
-button:hover {
-	border: 1px solid #669ade;
-	background: linear-gradient(177deg, #3a8cff 0%, #11111100 100%);
+.red {
+	background: linear-gradient(177deg, #9b3d3d 0%, #11111100 100%);
+}
+
+.hide {
+	opacity: 0;
 }
 
 @keyframes holo {
@@ -176,11 +209,17 @@ button:hover {
 	0% {
 		background-position-y: 0px;
 	}
-	50% {
+	100% {
 		background-position-y: 800px;
 	}
+}
+
+@keyframes loading {
+	0% {
+		transform: rotate3d(0, 1, 0, 0deg);
+	}
 	100% {
-		background-position-y: 0px;
+		transform: rotate3d(0, 1, 0, 360deg);
 	}
 }
 
